--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.30.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1"
   },
