--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@monaco-editor/react": "^4.7.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.26.1",
+    "idb": "^8.0.3",
     "less": "^4.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.30.1",
+    "react-redux": "^9.2.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1"
   },
