--- a/package.json
+++ b/package.json
@@ -15,15 +15,25 @@
     "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.26.1",
     "axios": "^1.10.0",
+    "better-react-mathjax": "^2.3.0",
+    "fetch-intercept": "^2.4.0",
+    "highlight.js": "^11.11.1",
     "idb": "^8.0.3",
+    "katex": "^0.16.22",
     "less": "^4.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-katex": "^3.1.0",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
+    "rehype-highlight": "^7.0.2",
+    "rehype-katex": "^7.0.1",
+    "rehype-mathjax": "^7.1.0",
     "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "whatwg-fetch": "^3.6.20"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
